--- a/mipagina/sanLuis/templates/sanLuis/index.html
+++ b/mipagina/sanLuis/templates/sanLuis/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
+{% extends 'sanLuis/base.html' %}
+
 {% load static %}
+{% block main %}
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -34,8 +37,8 @@
         <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container px-5">
-                    <h1 class="masthead-heading mb-0">One Page Wonder</h1>
-                    <h2 class="masthead-subheading mb-0">Will Rock Your Socks Off</h2>
+                    <h1 class="masthead-heading mb-0">I.S.L.G</h1>
+                    <h2 class="masthead-subheading mb-0">Instituto de educacion primaria, secuandaria y terciaria</h2>
                     <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>
                 </div>
             </div>
@@ -53,8 +56,8 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">For those about to rock...</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                            <h2 class="display-4">Confianza, educacion y calidad</h2>
+                            <p>Desde el 1969 brindando servicio de calidad a nuestros estudiantes.</p>
                         </div>
                     </div>
                 </div>
@@ -69,8 +72,8 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="p-5">
-                            <h2 class="display-4">We salute you!</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                            <h2 class="display-4">Bienvenido!</h2>
+                            <p>Se parte, disfruta y aprende.</p>
                         </div>
                     </div>
                 </div>
@@ -85,8 +88,8 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">Let there be rock!</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                            <h2 class="display-4">Personal</h2>
+                            <p>Personal capacitado para brindarte una experiencia gratificante.</p>
                         </div>
                     </div>
                 </div>
@@ -102,3 +105,4 @@
         <script src="js/scripts.js"></script>
     </body>
 </html>
+{% endblock main %} 
