--- a/mipagina/sanLuis/templates/sanLuis/busqueda_servicios.html
+++ b/mipagina/sanLuis/templates/sanLuis/busqueda_servicios.html
@@ -23,12 +23,11 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container px-5">
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">Educando con compromiso</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#!">Sign Up</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Log In</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'inicio' %}">inicio</a></li>
                     </ul>
                 </div>
             </div>
@@ -39,7 +38,7 @@
             <div class="masthead-content">
                 <div class="container px-5">
                     <h1 class="masthead-heading mb-0">Que seccion buscas</h1>
-                    <h2 class="masthead-subheading mb-0">Escoge tu seccion.</h2>
+                    <h2 class="masthead-subheading mb-0">Escoge tu seccion, ej:Quinto.</h2>
                     
                 </div>
             </div>
