--- a/mipagina/sanLuis/templates/sanLuis/formulario.html
+++ b/mipagina/sanLuis/templates/sanLuis/formulario.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 {% load static %}
-
 <html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title> {% block titulo %}Inicio{% endblock titulo %} </title>
+        <title> {% block titulo %}Registracion{% endblock titulo %} </title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -21,27 +20,23 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container px-5">
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">Educando con compromiso</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="{% url 'inicio' %}">inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'servicios' %}">servicios</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'contacto' %}">contacto</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'crearcliente' %}">crearcliente</a></li>
-                    </ul>
+
                     </ul>
                 </div>
             </div>
         </nav>
-        {% block main %}
         <!-- Header-->
         <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container px-5">
-                    <h1 class="masthead-heading mb-0">I.S.L.G</h1>
-                    <h2 class="masthead-subheading mb-0">Instituto de educacion primaria, secuandaria y terciaria</h2>
-                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>
+                    <h1 class="masthead-heading mb-0">Registrate!</h1>
+                    <h2 class="masthead-subheading mb-0">Ingresa tus datos</h2>
+
                 </div>
             </div>
             <div class="bg-circle-1 bg-circle"></div>
@@ -53,7 +48,31 @@
                     {% block body %}
 
                     {% endblock body %}
-
+                    <html>
+<head>
+    <title>Formulario de Cliente</title>
+</head>
+<body>
+    <h1>Ingrese los datos del cliente</h1>
+    <form method="post">
+        {% csrf_token %}
+        <div>
+            <label for="id_nombre">Nombre:</label>
+            <input type="text" name="nombre" id="id_nombre" required>
+        </div>
+        <div>
+            <label for="id_email">Email:</label>
+            <input type="email" name="email" id="id_email">
+        </div>
+        <div>
+            <label for="id_telefono">Teléfono:</label>
+            <input type="text" name="telefono" id="id_telefono" required>
+        </div>
+        <button type="submit">Guardar</button>
+    </form>
+</body>
+</html>
+                    
 
 
 
@@ -68,4 +87,3 @@
         <script src="js/scripts.js"></script>
     </body>
 </html>
-{% endblock main %}
