--- a/mipagina/sanLuis/templates/sanLuis/formulario.html
+++ b/mipagina/sanLuis/templates/sanLuis/formulario.html
@@ -34,8 +34,8 @@
         <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container px-5">
-                    <h1 class="masthead-heading mb-0">Registrate!</h1>
-                    <h2 class="masthead-subheading mb-0">Ingresa tus datos</h2>
+                    <h1 class="masthead-heading mb-0">Comienza hoy!</h1>
+                    <h2 class="masthead-subheading mb-0">Si quieres empezar, haznoslo saber dejando los siguientes datos y tu numero de telefono para que podamos contactarte en caso de que se apruebe la peticion!</h2>
 
                 </div>
             </div>
