--- a/mipagina/sanLuis/templates/sanLuis/pedido.html
+++ b/mipagina/sanLuis/templates/sanLuis/pedido.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
+
 {% load static %}
+
+
 
 <html lang="en">
     <head>
@@ -7,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title> {% block titulo %}Inicio{% endblock titulo %} </title>
+        <title> {% block titulo %}Pago{% endblock titulo %} </title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -21,15 +24,11 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container px-5">
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">Educando con compromiso</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="{% url 'inicio' %}">inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'servicios' %}">servicios</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'contacto' %}">contacto</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'crearcliente' %}">crearcliente</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'crear_pedido' %}">crearpedido</a></li>
                     </ul>
                     </ul>
                 </div>
@@ -40,9 +39,9 @@
         <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container px-5">
-                    <h1 class="masthead-heading mb-0">I.S.L.G</h1>
-                    <h2 class="masthead-subheading mb-0">Instituto de educacion primaria, secuandaria y terciaria</h2>
-                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>
+                    <h1 class="masthead-heading mb-0">Pago</h1>
+                    <h2 class="masthead-subheading mb-0">Deja el monto y la fecha en que pagaste para hacernos saber que abonaste y cuanto.</h2>
+
                 </div>
             </div>
             <div class="bg-circle-1 bg-circle"></div>
@@ -55,6 +54,19 @@
 
                     {% endblock body %}
 
+                    <form method="POST" action="{% url 'crear_pedido' %}">
+                        {% csrf_token %}
+                        <label for="numero">Número:</label>
+                        <input type="number" name="numero" required><br>
+                        <label for="fecha">Fecha:</label>
+                        <input type="date" name="fecha" required><br>
+                        <label for="pagado">Pagado:</label>
+                        <input type="checkbox" name="pagado" value="True"><br>
+                        <input type="submit" value="Guardar">
+                    </form>
+            
+</body>
+</html>
 
 
 
@@ -70,3 +82,4 @@
     </body>
 </html>
 {% endblock main %}
+
