--- a/mipagina/sanLuis/templates/sanLuis/resultados_busqueda.html
+++ b/mipagina/sanLuis/templates/sanLuis/resultados_busqueda.html
@@ -1,25 +1,60 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Agradecimiento</title>
+    <style>
+        /* Estilos CSS para el contenido */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+        }
 
-                    {% block body %}
-                    <html>
-                        <body>
-                            <p>Usted está buscando: <strong>{{query}}</strong></p>
-                        
-                            {% if servicios %}
-                                <p>Servicio localizado: {{servicios|length}} servicios</p>
-                        
-                                <ul>
-                                    {% for s in servicios %}
-                                        <li>
-                                            {{ s.nombre }} &nbsp;{{s.seccion}} &nbsp;{{s.precio}}
-                                        </li>
-                                    {% endfor %}
-                                </ul>
-                            {% else %}    
-                                <p>Servicio no encontrado</p>
-                            {% endif %}
-                        </body>
-                        </html>
-                    {% endblock body %}
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #ffffff;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            font-size: 24px;
+            color: #333333;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 16px;
+            line-height: 1.5;
+            color: #555555;
+            margin-bottom: 10px;
+        }
+
+        strong {
+            font-weight: bold;
+        }
+
+
+        
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Gracias por contactarnos</h1>
+        <p>Estimado(a) <strong>{{ nombre }}</strong>,</p>
+        <p>Gracias por contactarnos. Hemos recibido su mensaje y nos pondremos en contacto con usted lo antes posible.</p>
+        <p>Mientras tanto, le invitamos a explorar nuestro sitio web para conocer más sobre nuestros productos y servicios.</p>
+        <p>Atentamente, instituto San Luis Gonzaga</p>
+        <p>El equipo de ISLG</p>
+        
+    </div>
+</body>
+</html>
+
+
+
 
 
 
