--- a/mipagina/sanLuis/templates/sanLuis/agradecimiento.html
+++ b/mipagina/sanLuis/templates/sanLuis/agradecimiento.html
@@ -1,34 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agradecimiento</title>
     <style>
+        /* Estilos CSS para el contenido */
         body {
-            text-align: center;
             font-family: Arial, sans-serif;
-            margin: 0;
+            background-color: #f9f9f9;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
             padding: 20px;
+            background-color: #ffffff;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
         }
+
         h1 {
-            color: #333;
             font-size: 24px;
+            color: #333333;
             margin-bottom: 20px;
         }
+
         p {
-            color: #666;
-            font-size: 18px;
-            margin-bottom: 20px;
+            font-size: 16px;
+            line-height: 1.5;
+            color: #555555;
+            margin-bottom: 10px;
         }
-        .logo {
-            max-width: 200px;
-            margin-bottom: 20px;
+
+        strong {
+            font-weight: bold;
         }
+
+
+
     </style>
 </head>
 <body>
+    <div class="container">
+        <h1>Gracias por contactarnos</h1>
+        <p>Estimado(a) <strong>{{ nombre }}</strong>,</p>
+        <p>Gracias por contactarnos. Hemos recibido su mensaje y nos pondremos en contacto con usted lo antes posible.</p>
+        <p>Mientras tanto, le invitamos a explorar nuestro sitio web para conocer más sobre nuestros productos y servicios.</p>
+        <p>Atentamente, Instituto Sanl Luis Gonzaga</p>
+        <p>El equipo de ISLG</p>
 
-    <h1>¡Gracias por contactarnos!</h1>
-    <p>Estamos encantados de recibir tu mensaje y nos pondremos en contacto contigo lo antes posible.</p>
+    </div>
 </body>
 </html>
 
