--- a/mipagina/accounts/templates/accounts/masinfo.html
+++ b/mipagina/accounts/templates/accounts/masinfo.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
+
 {% load static %}
+
+
 
 <html lang="en">
     <head>
@@ -7,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title> {% block titulo %}Inicio{% endblock titulo %} </title>
+        <title> {% block titulo %}Sobre mi{% endblock titulo %} </title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -25,28 +28,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="{% url 'servicios' %}">servicios</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'contacto' %}">contacto</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">nosotros</a></li>
-                        {% if request.user.is_authenticated %}
-                        {% if request.user.accounts.avatar %}
-                            <li class="nav-item">
-                                <img src="{{ request.user.accounts.avatar.url }}" alt="" style="width: 50px; height: 50px;">
-                            </li>
-                        {% endif %}
-                        <li class="nav-item"><a class="nav-link" href="">Hola, {{ request.user.username }} </a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'crearcliente' %}">Inscribirme</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'crear_pedido' %}">pago</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'editar' %}">Editar perfil</a></li>
-                    {% else %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Iniciar sesion</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">crear cuenta</a></li>
-                    {% endif %}
-                    
-                    </ul>
-                    
-
+                        <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">inicio</a></li>
                     </ul>
                     </ul>
                 </div>
@@ -57,9 +39,17 @@
         <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container px-5">
-                    <h1 class="masthead-heading mb-0">I.S.L.G</h1>
-                    <h2 class="masthead-subheading mb-0">Instituto de educacion primaria, secuandaria y terciaria</h2>
-                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll"></a>
+                    <h1 class="masthead-heading mb-0">ISLG, informacion.</h1>
+                    <h2 class="masthead-subheading mb-0">San Luis Gonzaga es un colegio reconocido por su excelencia académica y compromiso con la educación de calidad. Ubicado en un entorno tranquilo y rodeado de naturaleza, nuestro colegio ofrece un ambiente propicio para el aprendizaje y el desarrollo integral de nuestros estudiantes.
+
+                        En San Luis Gonzaga, nos enorgullece brindar una educación basada en valores sólidos, fomentando el respeto, la responsabilidad y la solidaridad en cada uno de nuestros alumnos. Creemos en la importancia de formar no solo buenos estudiantes, sino también buenos ciudadanos, capaces de enfrentar los desafíos del mundo actual con ética y compromiso.
+                        
+                        Nuestro equipo docente está altamente calificado y comprometido con la excelencia educativa. Fomentamos un ambiente de aprendizaje dinámico y participativo, donde los estudiantes son motivados a explorar su creatividad, desarrollar habilidades de pensamiento crítico y adquirir conocimientos sólidos en diversas áreas del saber.</h2>
+                    <h1 class="masthead-heading mb-0"></h1>
+                    <p></p>
+                    <h2 class="masthead-subheading mb-0">
+                    </h2>
+                    
                 </div>
             </div>
             <div class="bg-circle-1 bg-circle"></div>
@@ -68,9 +58,6 @@
             <div class="bg-circle-4 bg-circle"></div>
         </header>
 
-                    {% block body %}
-
-                    {% endblock body %}
 
 
 
