--- a/mipagina/sanLuis/templates/sanLuis/formulario.html
+++ b/mipagina/sanLuis/templates/sanLuis/formulario.html
@@ -24,7 +24,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="{% url 'inicio' %}">inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">inicio</a></li>
 
                     </ul>
                 </div>
@@ -62,7 +62,7 @@
         </div>
         <div>
             <label for="id_email">Email:</label>
-            <input type="email" name="email" id="id_email">
+                <input type="email" name="email" id="id_email">
         </div>
         <div>
             <label for="id_telefono">Teléfono:</label>
