--- a/mipagina/sanLuis/templates/sanLuis/index.html
+++ b/mipagina/sanLuis/templates/sanLuis/index.html
@@ -40,13 +40,14 @@
                 <div class="container px-5">
                     <h1 class="masthead-heading mb-0">I.S.L.G</h1>
                     <h2 class="masthead-subheading mb-0">Instituto de educacion primaria, secuandaria y terciaria</h2>
-                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>
+                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">SABER MAS</a>
                 </div>
             </div>
             <div class="bg-circle-1 bg-circle"></div>
             <div class="bg-circle-2 bg-circle"></div>
             <div class="bg-circle-3 bg-circle"></div>
             <div class="bg-circle-4 bg-circle"></div>
+            
         </header>
         <!-- Content section 1-->
         <section id="scroll">
@@ -58,6 +59,7 @@
                         <div class="p-5">
                             <h2 class="display-4">Confianza, educacion y calidad</h2>
                             <p>Desde el 1969 brindando servicio de calidad a nuestros estudiantes.</p>
+                            <img src="{% static 'imagenes/islg.png' %}" alt=""
                         </div>
                     </div>
                 </div>
@@ -73,6 +75,7 @@
                         <div class="p-5">
                             <h2 class="display-4">Bienvenido!</h2>
                             <p>Se parte, disfruta y aprende.</p>
+                            <img src="{% static 'imagenes/gonzaga.jpg' %}" alt="" 
                         </div>
                     </div>
                 </div>
