--- a/mipagina/sanLuis/templates/sanLuis/pedido.html
+++ b/mipagina/sanLuis/templates/sanLuis/pedido.html
@@ -28,7 +28,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="{% url 'inicio' %}">inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">inicio</a></li>
                     </ul>
                     </ul>
                 </div>
@@ -48,8 +48,7 @@
             <div class="bg-circle-2 bg-circle"></div>
             <div class="bg-circle-3 bg-circle"></div>
             <div class="bg-circle-4 bg-circle"></div>
-        </header>
-
+            <p></p>
                     {% block body %}
 
                     {% endblock body %}
@@ -67,6 +66,10 @@
             
 </body>
 </html>
+
+<p></p>
+        </header>
+
 
 
 
