--- a/mipagina/accounts/templates/accounts/about.html
+++ b/mipagina/accounts/templates/accounts/about.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
+
 {% load static %}
+
+
 
 <html lang="en">
     <head>
@@ -7,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title> {% block titulo %}Inicio{% endblock titulo %} </title>
+        <title> {% block titulo %}Sobre mi{% endblock titulo %} </title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -25,28 +28,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="{% url 'servicios' %}">servicios</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'contacto' %}">contacto</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">nosotros</a></li>
-                        {% if request.user.is_authenticated %}
-                        {% if request.user.accounts.avatar %}
-                            <li class="nav-item">
-                                <img src="{{ request.user.accounts.avatar.url }}" alt="" style="width: 50px; height: 50px;">
-                            </li>
-                        {% endif %}
-                        <li class="nav-item"><a class="nav-link" href="">Hola, {{ request.user.username }} </a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'crearcliente' %}">Inscribirme</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'crear_pedido' %}">pago</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'editar' %}">Editar perfil</a></li>
-                    {% else %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Iniciar sesion</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">crear cuenta</a></li>
-                    {% endif %}
-                    
-                    </ul>
-                    
-
+                        <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">inicio</a></li>
                     </ul>
                     </ul>
                 </div>
@@ -57,9 +39,18 @@
         <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container px-5">
-                    <h1 class="masthead-heading mb-0">I.S.L.G</h1>
-                    <h2 class="masthead-subheading mb-0">Instituto de educacion primaria, secuandaria y terciaria</h2>
-                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll"></a>
+                    <h1 class="masthead-heading mb-0">Sobre mi</h1>
+                    <h2 class="masthead-subheading mb-0">Hola!, me llamo Bautista, tengo 17 años y vivo en un pueblito llamado Gral. Las Heras, a 1 hora de la capital. Comencé este curso porque siempre me ha interesado la tecnología y ahora que debo elegir qué carrera estudiar, necesitaba saber qué es la programación, ya que dentro de mis posibilidades es la que más me llama la atención.</h2>
+                    <h1 class="masthead-heading mb-0">Sobre la pagina</h1>
+                    <p></p>
+                    <h2 class="masthead-subheading mb-0">Esta página está inspirada en mi escuela, a la cual le tengo tanto amor. Creí que crear una página sería una buena idea, ya que mi colegio no tiene una.
+
+                        En la página podemos encontrar muchas funciones útiles, como saber el precio de cada ciclo, dejar constancia de un pago, contactarse con los directivos o inscribirse, entre otras
+                    </h2>
+                    <div class="d-flex justify-content-center">
+                        <a href="{% url 'masinfo' %}" class="btn btn-primary">Más información</a>
+                    </div>
+                    
                 </div>
             </div>
             <div class="bg-circle-1 bg-circle"></div>
@@ -68,9 +59,6 @@
             <div class="bg-circle-4 bg-circle"></div>
         </header>
 
-                    {% block body %}
-
-                    {% endblock body %}
 
 
 
