--- a/mipagina/sanLuis/templates/sanLuis/agradecimiento.html
+++ b/mipagina/sanLuis/templates/sanLuis/agradecimiento.html
@@ -42,12 +42,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Gracias por contactarnos</h1>
-        <p>Estimado(a) <strong>{{ nombre }}</strong>,</p>
-        <p>Gracias por contactarnos. Hemos recibido su mensaje y nos pondremos en contacto con usted lo antes posible.</p>
-        <p>Mientras tanto, le invitamos a explorar nuestro sitio web para conocer más sobre nuestros productos y servicios.</p>
-        <p>Atentamente, Instituto Sanl Luis Gonzaga</p>
-        <p>El equipo de ISLG</p>
+        <h1>Gracias por utilizar nuestra pagina!</h1>
+
 
     </div>
 </body>
