--- a/mipagina/sanLuis/templates/sanLuis/agradecimiento.html
+++ b/mipagina/sanLuis/templates/sanLuis/agradecimiento.html
@@ -35,17 +35,13 @@
         strong {
             font-weight: bold;
         }
-
-
-
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Gracias por utilizar nuestra pagina!</h1>
-
-
+        <h1>Gracias por utilizar nuestra página!</h1>
     </div>
 </body>
 </html>
+
 
