--- a/mipagina/sanLuis/templates/sanLuis/modalidades.html
+++ b/mipagina/sanLuis/templates/sanLuis/modalidades.html
@@ -45,39 +45,30 @@
             <div class="bg-circle-3 bg-circle"></div>
             <div class="bg-circle-4 bg-circle"></div>
         </header>
-
-                    {% block body %}
-
-                    {% endblock body %}
-
-
-                    
-                    <html>
-                        <body>
-                            <p>Usted está buscando: <strong>{{query}}</strong></p>
-                        
-                            {% if servicios %}
-                                <p>Servicio localizado: {{servicios|length}} servicios</p>
-                        
-                                <ul>
-                                    {% for s in servicios %}
-                                        <li>
-                                            {{ s.nombre }} &nbsp;{{s.seccion}} &nbsp;{{s.precio}}
-                                        </li>
-                                    {% endfor %}
-                                </ul>
-                            {% else %}    
-                                <p>Servicio no encontrado</p>
-                            {% endif %}
-                        </body>
-                        </html>
-                   
-
-
-
+        {% block body %}
+        <html>
+            <body>
+                <p>Usted está buscando: <strong>{{query}}</strong></p>
+            
+                {% if servicios %}
+                    <p>Servicio localizado: {{servicios|length}} servicios</p>
+            
+                    <ul>
+                        {% for s in servicios %}
+                            <li>
+                                {{ s.nombre }} &nbsp;{{s.seccion}} &nbsp;{{s.precio}}
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% else %}    
+                    <p>Servicio no encontrado</p>
+                {% endif %}
+            </body>
+        </html>
+        {% endblock body %}
         <!-- Footer-->
         <footer class="py-5 bg-black">
-            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p></div>
+            <div class="container px-5"><p class="m-0 text-center text-white small">© Your Website 2023</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
