--- a/mipagina/accounts/templates/accounts/about.html
+++ b/mipagina/accounts/templates/accounts/about.html
@@ -1,77 +1,71 @@
 <!DOCTYPE html>
-
 {% load static %}
 
-
-
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title> {% block titulo %}Sobre mi{% endblock titulo %} </title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href='{% static "ProyectoSanluis/css/styles.css" %}' rel="stylesheet" />
-    </head>
-    <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>{% block titulo %}Sobre mi{% endblock titulo %}</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}">
+    <!-- Font Awesome icons (free version) -->
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+    <!-- Core theme CSS (includes Bootstrap) -->
+    <link href="{% static 'ProyectoSanluis/css/styles.css' %}" rel="stylesheet">
+</head>
+<body id="page-top">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+        <div class="container px-5">
+            <a class="navbar-brand" href="#page-top">Educando con compromiso</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Inicio</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    {% block main %}
+    <!-- Header -->
+    <header class="masthead text-center text-white">
+        <div class="masthead-content">
             <div class="container px-5">
-                <a class="navbar-brand" href="#page-top">Educando con compromiso</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">inicio</a></li>
-                    </ul>
-                    </ul>
+                <h1 class="masthead-heading mb-0">Sobre mi</h1>
+                <h2 class="masthead-subheading mb-0">Hola, me llamo Bautista, tengo 17 años y vivo en un pueblito llamado Gral. Las Heras, a 1 hora de la capital. Comencé este curso porque siempre me ha interesado la tecnología y ahora que debo elegir qué carrera estudiar, necesitaba saber qué es la programación, ya que dentro de mis posibilidades es la que más me llama la atención.</h2>
+                <h1 class="masthead-heading mb-0">Sobre la página</h1>
+                <p></p>
+                <h2 class="masthead-subheading mb-0">Esta página está inspirada en mi escuela, a la cual le tengo tanto amor. Creí que crear una página sería una buena idea, ya que mi colegio no tiene una.</h2>
+                <h2 class="masthead-subheading mb-0">En la página podemos encontrar muchas funciones útiles, como saber el precio de cada ciclo, dejar constancia de un pago, contactarse con los directivos o inscribirse, entre otras.</h2>
+                <div class="d-flex justify-content-center">
+                    <a href="{% url 'masinfo' %}" class="btn btn-primary">Más información</a>
                 </div>
             </div>
-        </nav>
-        {% block main %}
-        <!-- Header-->
-        <header class="masthead text-center text-white">
-            <div class="masthead-content">
-                <div class="container px-5">
-                    <h1 class="masthead-heading mb-0">Sobre mi</h1>
-                    <h2 class="masthead-subheading mb-0">Hola!, me llamo Bautista, tengo 17 años y vivo en un pueblito llamado Gral. Las Heras, a 1 hora de la capital. Comencé este curso porque siempre me ha interesado la tecnología y ahora que debo elegir qué carrera estudiar, necesitaba saber qué es la programación, ya que dentro de mis posibilidades es la que más me llama la atención.</h2>
-                    <h1 class="masthead-heading mb-0">Sobre la pagina</h1>
-                    <p></p>
-                    <h2 class="masthead-subheading mb-0">Esta página está inspirada en mi escuela, a la cual le tengo tanto amor. Creí que crear una página sería una buena idea, ya que mi colegio no tiene una.
+        </div>
+        <div class="bg-circle-1 bg-circle"></div>
+        <div class="bg-circle-2 bg-circle"></div>
+        <div class="bg-circle-3 bg-circle"></div>
+        <div class="bg-circle-4 bg-circle"></div>
+    </header>
+    {% endblock main %}
 
-                        En la página podemos encontrar muchas funciones útiles, como saber el precio de cada ciclo, dejar constancia de un pago, contactarse con los directivos o inscribirse, entre otras
-                    </h2>
-                    <div class="d-flex justify-content-center">
-                        <a href="{% url 'masinfo' %}" class="btn btn-primary">Más información</a>
-                    </div>
-                    
-                </div>
-            </div>
-            <div class="bg-circle-1 bg-circle"></div>
-            <div class="bg-circle-2 bg-circle"></div>
-            <div class="bg-circle-3 bg-circle"></div>
-            <div class="bg-circle-4 bg-circle"></div>
-        </header>
+    <!-- Footer -->
+    <footer class="py-5 bg-black">
+        <div class="container px-5">
+            <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p>
+        </div>
+    </footer>
 
-
-
-
-
-
-        <!-- Footer-->
-        <footer class="py-5 bg-black">
-            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p></div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+    <!-- Bootstrap core JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS -->
+    <script src="{% static 'js/scripts.js' %}"></script>
+</body>
 </html>
-{% endblock main %}
