--- a/mipagina/accounts/templates/accounts/masinfo.html
+++ b/mipagina/accounts/templates/accounts/masinfo.html
@@ -1,76 +1,65 @@
 <!DOCTYPE html>
-
 {% load static %}
 
-
-
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title> {% block titulo %}Sobre mi{% endblock titulo %} </title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href='{% static "ProyectoSanluis/css/styles.css" %}' rel="stylesheet" />
-    </head>
-    <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>{% block titulo %}Sobre mi{% endblock titulo %}</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Font Awesome icons (free version) -->
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap) -->
+    <link href='{% static "ProyectoSanluis/css/styles.css" %}' rel="stylesheet" />
+</head>
+<body id="page-top">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+        <div class="container px-5">
+            <a class="navbar-brand" href="#page-top">Educando con compromiso</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Inicio</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    
+    {% block main %}
+    <!-- Header-->
+    <header class="masthead text-center text-white">
+        <div class="masthead-content">
             <div class="container px-5">
-                <a class="navbar-brand" href="#page-top">Educando con compromiso</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">inicio</a></li>
-                    </ul>
-                    </ul>
-                </div>
+                <h1 class="masthead-heading mb-0">ISLG, Información.</h1>
+                <h2 class="masthead-subheading mb-0">San Luis Gonzaga es un colegio reconocido por su excelencia académica y compromiso con la educación de calidad. Ubicado en un entorno tranquilo y rodeado de naturaleza, nuestro colegio ofrece un ambiente propicio para el aprendizaje y el desarrollo integral de nuestros estudiantes.</h2>
+                <h2 class="masthead-subheading mb-0">En San Luis Gonzaga, nos enorgullece brindar una educación basada en valores sólidos, fomentando el respeto, la responsabilidad y la solidaridad en cada uno de nuestros alumnos. Creemos en la importancia de formar no solo buenos estudiantes, sino también buenos ciudadanos, capaces de enfrentar los desafíos del mundo actual con ética y compromiso.</h2>
+                <h2 class="masthead-subheading mb-0">Nuestro equipo docente está altamente calificado y comprometido con la excelencia educativa. Fomentamos un ambiente de aprendizaje dinámico y participativo, donde los estudiantes son motivados a explorar su creatividad, desarrollar habilidades de pensamiento crítico y adquirir conocimientos sólidos en diversas áreas del saber.</h2>
             </div>
-        </nav>
-        {% block main %}
-        <!-- Header-->
-        <header class="masthead text-center text-white">
-            <div class="masthead-content">
-                <div class="container px-5">
-                    <h1 class="masthead-heading mb-0">ISLG, informacion.</h1>
-                    <h2 class="masthead-subheading mb-0">San Luis Gonzaga es un colegio reconocido por su excelencia académica y compromiso con la educación de calidad. Ubicado en un entorno tranquilo y rodeado de naturaleza, nuestro colegio ofrece un ambiente propicio para el aprendizaje y el desarrollo integral de nuestros estudiantes.
+        </div>
+        <div class="bg-circle-1 bg-circle"></div>
+        <div class="bg-circle-2 bg-circle"></div>
+        <div class="bg-circle-3 bg-circle"></div>
+        <div class="bg-circle-4 bg-circle"></div>
+    </header>
+    {% endblock main %}
 
-                        En San Luis Gonzaga, nos enorgullece brindar una educación basada en valores sólidos, fomentando el respeto, la responsabilidad y la solidaridad en cada uno de nuestros alumnos. Creemos en la importancia de formar no solo buenos estudiantes, sino también buenos ciudadanos, capaces de enfrentar los desafíos del mundo actual con ética y compromiso.
-                        
-                        Nuestro equipo docente está altamente calificado y comprometido con la excelencia educativa. Fomentamos un ambiente de aprendizaje dinámico y participativo, donde los estudiantes son motivados a explorar su creatividad, desarrollar habilidades de pensamiento crítico y adquirir conocimientos sólidos en diversas áreas del saber.</h2>
-                    <h1 class="masthead-heading mb-0"></h1>
-                    <p></p>
-                    <h2 class="masthead-subheading mb-0">
-                    </h2>
-                    
-                </div>
-            </div>
-            <div class="bg-circle-1 bg-circle"></div>
-            <div class="bg-circle-2 bg-circle"></div>
-            <div class="bg-circle-3 bg-circle"></div>
-            <div class="bg-circle-4 bg-circle"></div>
-        </header>
-
-
-
-
-
-
-        <!-- Footer-->
-        <footer class="py-5 bg-black">
-            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p></div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+    <!-- Footer-->
+    <footer class="py-5 bg-black">
+        <div class="container px-5">
+            <p class="m-0 text-center text-white small">&copy; Your Website 2023</p>
+        </div>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+</body>
 </html>
-{% endblock main %}
