--- a/mipagina/accounts/templates/accounts/mostrar_account.html
+++ b/mipagina/accounts/templates/accounts/mostrar_account.html
@@ -3,19 +3,29 @@
 
 {% load static %}
 
-<title> {% block titulo %}Mostrar perfil{% endblock titulo %} </title>
+{% block titulo %}Mostrar perfil{% endblock titulo %}
 
 {% block main %}
-    <div class="row"
-        div class="card m-2" style="width: 18rem;">
-            <div class="card-body">
-            <h5 class="card-title" {{ request.user.first_name }} {{ request.user.last_name }}> </h5>
-            <p> class="card-text">Email: {{ request.user.email }} </p>
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <h3 class="card-title">Perfil de Usuario</h3>
+                        <p class="card-text">Nombre de usuario: {{ request.user.username }}</p>
+                        <p class="card-text">Email: {{ request.user.email }}</p>
+                        <p class="card-text">Fecha de creación: {{ request.user.date_joined }}</p>
+                    </div>
+                </div>
             </div>
-        </div>    
-    </div>    
-    <div class="card m-2" style="width: 18rem;">
-    </div>    
-    
+        </div>
+    </div>
 {% endblock main %}
 
+{% block body %}
+<style>
+    body {
+        background-color: #f8f9fa;
+    }
+</style>
+{% endblock body %}
