--- a/mipagina/sanLuis/templates/sanLuis/base.html
+++ b/mipagina/sanLuis/templates/sanLuis/base.html
@@ -2,88 +2,89 @@
 {% load static %}
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title> {% block titulo %}Inicio{% endblock titulo %} </title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href='{% static "ProyectoSanluis/css/styles.css" %}' rel="stylesheet" />
-    </head>
-    <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>{% block titulo %}Inicio{% endblock titulo %}</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="{% static 'ProyectoSanluis/css/styles.css' %}" rel="stylesheet" />
+</head>
+<body id="page-top">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+        <div class="container px-5">
+            <a class="navbar-brand" href="#page-top">Educando con compromiso</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        <!-- Navbar HTML -->
+<div class="collapse navbar-collapse" id="navbarResponsive">
+    <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="{% url 'servicios' %}">servicios</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'contacto' %}">contacto</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">nosotros</a></li>
+        {% if request.user.is_authenticated %}
+        {% if request.user.accounts.avatar %}
+        <li class="nav-item">
+            <img src="{{ request.user.accounts.avatar.url }}" alt="" style="width: 50px; height: 50px;">
+        </li>
+        {% endif %}
+        <li class="nav-item"><a class="nav-link" href="{% url 'mostrar' %}">Hola, {{ request.user.username }}</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'crearcliente' %}">Inscribirme</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'crear_pedido' %}">pago</a></li>
+        <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Modalidades <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+                <li><a href="{% url 'modalidad_lista' %}">Lista de Modalidades</a></li>
+                <li><a href="{% url 'modalidad_create' %}">Crear Modalidad</a></li>
+                <a class="nav-link" href="{% url 'modalidad_update' modalidad.id %}">Actualizar Modalidad</a>
+                <li><a href="{% url 'modalidad_delete' pk=1 %}">Eliminar Modalidad</a></li>
+            </ul>
+        </li>
+        {% else %}
+        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Crear cuenta</a></li>
+        {% endif %}
+    </ul>
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!-- Archivo JavaScript personalizado -->
+<script src="{% static 'js/script.js' %}"></script>
+            </div>
+        </div>
+    </nav>
+    {% block main %}
+    <!-- Header-->
+    <header class="masthead text-center text-white">
+        <div class="masthead-content">
             <div class="container px-5">
-                <a class="navbar-brand" href="#page-top">Educando con compromiso</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="{% url 'servicios' %}">servicios</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'contacto' %}">contacto</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">nosotros</a></li>
-                        {% if request.user.is_authenticated %}
-                        {% if request.user.accounts.avatar %}
-                            <li class="nav-item">
-                                <img src="{{ request.user.accounts.avatar.url }}" alt="" style="width: 50px; height: 50px;">
-                            </li>
-                        {% endif %}
-                        <li class="nav-item"><a class="nav-link" href="">Hola, {{ request.user.username }} </a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'crearcliente' %}">Inscribirme</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'crear_pedido' %}">pago</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'editar' %}">Editar perfil</a></li>
-                    {% else %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Iniciar sesion</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">crear cuenta</a></li>
-                    {% endif %}
-                    
-                    </ul>
-                    
-
-                    </ul>
-                    </ul>
-                </div>
+                <h1 class="masthead-heading mb-0">I.S.L.G</h1>
+                <h2 class="masthead-subheading mb-0">Instituto de educacion primaria, secuandaria y terciaria</h2>
+                <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Ver</a>
             </div>
-        </nav>
-        {% block main %}
-        <!-- Header-->
-        <header class="masthead text-center text-white">
-            <div class="masthead-content">
-                <div class="container px-5">
-                    <h1 class="masthead-heading mb-0">I.S.L.G</h1>
-                    <h2 class="masthead-subheading mb-0">Instituto de educacion primaria, secuandaria y terciaria</h2>
-                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll"></a>
-                </div>
-            </div>
-            <div class="bg-circle-1 bg-circle"></div>
-            <div class="bg-circle-2 bg-circle"></div>
-            <div class="bg-circle-3 bg-circle"></div>
-            <div class="bg-circle-4 bg-circle"></div>
-        </header>
+        </div>
+        <div class="bg-circle-1 bg-circle"></div>
+        <div class="bg-circle-2 bg-circle"></div>
+        <div class="bg-circle-3 bg-circle"></div>
+        <div class="bg-circle-4 bg-circle"></div>
+    </header>
 
-                    {% block body %}
+    <section id="scroll">
+        <!-- Contenido de la sección -->
+    </section>
+    {% endblock main %}
 
-                    {% endblock body %}
-
-
-
-
-
-        <!-- Footer-->
-        <footer class="py-5 bg-black">
-            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p></div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+    {% block body %}{% endblock body %}
+</body>
 </html>
-{% endblock main %}
