--- a/mipagina/sanLuis/templates/sanLuis/pedido.html
+++ b/mipagina/sanLuis/templates/sanLuis/pedido.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-
 {% load static %}
-
-
 
 <html lang="en">
     <head>
@@ -30,7 +27,6 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">inicio</a></li>
                     </ul>
-                    </ul>
                 </div>
             </div>
         </nav>
@@ -41,42 +37,32 @@
                 <div class="container px-5">
                     <h1 class="masthead-heading mb-0">Pago</h1>
                     <h2 class="masthead-subheading mb-0">Deja el monto y la fecha en que pagaste para hacernos saber que abonaste y cuanto.</h2>
-
                 </div>
             </div>
             <div class="bg-circle-1 bg-circle"></div>
             <div class="bg-circle-2 bg-circle"></div>
             <div class="bg-circle-3 bg-circle"></div>
             <div class="bg-circle-4 bg-circle"></div>
-            <p></p>
-                    {% block body %}
-
-                    {% endblock body %}
-
-                    <form method="POST" action="{% url 'crear_pedido' %}">
-                        {% csrf_token %}
-                        <label for="numero">Número:</label>
-                        <input type="number" name="numero" required><br>
-                        <label for="fecha">Fecha:</label>
-                        <input type="date" name="fecha" required><br>
-                        <label for="pagado">Pagado:</label>
-                        <input type="checkbox" name="pagado" value="True"><br>
-                        <input type="submit" value="Guardar">
-                    </form>
-            
-</body>
-</html>
-
-<p></p>
         </header>
-
-
-
-
-
+        {% block body %}
+        <form method="POST" action="{% url 'crear_pedido' %}">
+            {% csrf_token %}
+            <label for="numero">Número:</label>
+            <input type="number" name="numero" required><br>
+            <label for="fecha">Fecha:</label>
+            <input type="date" name="fecha" required><br>
+            <label for="pagado">Pagado:</label>
+            <input type="checkbox" name="pagado" value="True"><br>
+            <input type="submit" value="Guardar">
+        </form>
+        {% endblock body %}
+        </html>
+        </header>
+        <p></p>
+        </header>
         <!-- Footer-->
         <footer class="py-5 bg-black">
-            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p></div>
+            <div class="container px-5"><p class="m-0 text-center text-white small">© Your Website 2023</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -85,4 +71,5 @@
     </body>
 </html>
 {% endblock main %}
+
 
