--- a/mipagina/sanLuis/templates/sanLuis/resultados_busqueda.html
+++ b/mipagina/sanLuis/templates/sanLuis/resultados_busqueda.html
@@ -35,8 +35,6 @@
                             <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Iniciar sesion</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">crear cuenta</a></li>
                         {% endif %}
-
-                    </ul>
                     </ul>
                 </div>
             </div>
@@ -47,7 +45,7 @@
             <div class="masthead-content">
                 <div class="container px-5">
                     <h1 class="masthead-heading mb-0">I.S.L.G</h1>
-                    <h2 class="masthead-subheading mb-0">Instituto de educacion primaria, secuandaria y terciaria</h2>
+                    <h2 class="masthead-subheading mb-0">Instituto de educacion primaria, secundaria y terciaria</h2>
                     <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll"> VER </a>
                 </div>
             </div>
@@ -56,7 +54,6 @@
             <div class="bg-circle-3 bg-circle"></div>
             <div class="bg-circle-4 bg-circle"></div>
         </header>
-
         
         <div class="container">
             <h1>Resultados de búsqueda</h1>
@@ -80,26 +77,18 @@
                 <p>No se encontraron servicios relacionados con la búsqueda.</p>
             {% endif %}
         </div>
-    
-
-
-
-
-
+        
         <!-- Footer-->
         <footer class="py-5 bg-black">
-            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p></div>
+            <div class="container px-5"><p class="m-0 text-center text-white small">© Your Website 2023</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
-    <section id="scroll">
-        <!-- Contenido de la sección -->
-    </section>
-
 </html>
+
 
 
 
