--- a/mipagina/sanLuis/templates/sanLuis/base.html
+++ b/mipagina/sanLuis/templates/sanLuis/base.html
@@ -20,57 +20,52 @@
 <body id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-        <div class="container px-5">
+        <div class="container-fluid px-5"> <!-- Se modificó la clase a container-fluid -->
             <a class="navbar-brand" href="#page-top">Educando con compromiso</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-        <!-- Navbar HTML -->
-<div class="collapse navbar-collapse" id="navbarResponsive">
-    <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="{% url 'servicios' %}">servicios</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'contacto' %}">contacto</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">nosotros</a></li>
-        {% if request.user.is_authenticated %}
-        {% if request.user.accounts.avatar %}
-        <li class="nav-item">
-            <img src="{{ request.user.accounts.avatar.url }}" alt="" style="width: 50px; height: 50px;">
-        </li>
-        {% endif %}
-        <li class="nav-item"><a class="nav-link" href="{% url 'mostrar' %}">Hola, {{ request.user.username }}</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'crearcliente' %}">Inscribirme</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'crear_pedido' %}">pago</a></li>
-        <li class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Modalidades <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-                <li><a href="{% url 'modalidad_lista' %}">Lista de Modalidades</a></li>
-                <li><a href="{% url 'modalidad_create' %}">Crear Modalidad</a></li>
-                <a class="nav-link" href="{% url 'modalidad_update' modalidad.id %}">Actualizar Modalidad</a>
-                <li><a href="{% url 'modalidad_delete' pk=1 %}">Eliminar Modalidad</a></li>
-            </ul>
-        </li>
-        {% else %}
-        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Crear cuenta</a></li>
-        {% endif %}
-    </ul>
-</div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<!-- Archivo JavaScript personalizado -->
-<script src="{% static 'js/script.js' %}"></script>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="{% url 'servicios' %}">servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'contacto' %}">contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">nosotros</a></li>
+                    {% if request.user.is_authenticated %}
+                        {% if request.user.accounts.avatar %}
+                            <li class="nav-item">
+                                <img src="{{ request.user.accounts.avatar.url }}" alt="" style="width: 50px; height: 50px;">
+                            </li>
+                        {% endif %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'mostrar' %}">Hola, {{ request.user.username }}</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'crearcliente' %}">Inscribirme</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'crear_pedido' %}">pago</a></li>
+                        <li  class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Cerrar sesión</a></li>
+                        <li  class="nav-item"><a class="nav-link" href="{% url 'editar' %}">Editar Perfil</a></li>
+                        <li class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Modalidades <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{% url 'modalidad_lista' %}">Lista de Modalidades</a></li>
+                                <li><a href="{% url 'modalidad_create' %}">Crear Modalidad</a></li>
+                            </ul>
+                        </li>
+                    {% else %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Crear cuenta</a></li>
+                    {% endif %}
+                </ul>
             </div>
         </div>
     </nav>
+    
+    
     {% block main %}
     <!-- Header-->
     <header class="masthead text-center text-white">
         <div class="masthead-content">
             <div class="container px-5">
-                <h1 class="masthead-heading mb-0">I.S.L.G</h1>
-                <h2 class="masthead-subheading mb-0">Instituto de educacion primaria, secuandaria y terciaria</h2>
+                <h1 class="masthead-heading mb-0">Modalidades</h1>
+                <h2 class="masthead-subheading mb-0">Descubre qué tenemos para ofrecer</h2>
                 <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Ver</a>
             </div>
         </div>
@@ -84,7 +79,16 @@
         <!-- Contenido de la sección -->
     </section>
     {% endblock main %}
-
+    
+    {% block modalidades %}
+    {% endblock %}
+    
     {% block body %}{% endblock body %}
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- Archivo JavaScript personalizado -->
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
