--- a/mipagina/sanLuis/templates/sanLuis/detail.html
+++ b/mipagina/sanLuis/templates/sanLuis/detail.html
@@ -5,10 +5,14 @@
 {% block main %}
     <div class="container mt-5">
         <h1>Detalles de la Modalidad</h1>
-        <p>Nombre: {{ object.titulo }}</p>
-        <p>Modalidad: {{ object.subtitulo }}</p>
+        <p>Nombre: {{ modalidad.titulo }}</p>
+        <p>Subtítulo: {{ modalidad.subtitulo }}</p>
+        <p>Contenido: {{ modalidad.contenido }}</p>
+        <p>Autor: {{ modalidad.autor }}</p>
+        <p>Fecha: {{ modalidad.fecha }}</p>
+        <p> <img src="{{ modalidad.imagen.url }}" alt="Imagen de la Modalidad"></p>
         
         <a href="{% url 'modalidad_lista' %}" class="btn btn-secondary">Volver</a>
-        <a href="{% url 'modalidad_update' object.pk %}" class="btn btn-secondary">Actualizar</a>
+        <a href="{% url 'modalidad_update' modalidad.pk %}" class="btn btn-secondary">Actualizar</a>
     </div>
 {% endblock main %}
