--- a/mipagina/sanLuis/templates/sanLuis/modalidad_lista.html
+++ b/mipagina/sanLuis/templates/sanLuis/modalidad_lista.html
@@ -1,11 +1,6 @@
+{% extends 'sanLuis/base.html' %}
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
+{% block modalidades %}
     <h1>MODALIDADES</h1>
     <ul>
         {% for modalidad in object_list %}
@@ -19,5 +14,8 @@
         </li>
         {% endfor %}
     </ul>
-</body>
-</html>
+    {% endblock %}
+
+
+
+
