--- a/mipagina/accounts/templates/accounts/editar_perfil.html
+++ b/mipagina/accounts/templates/accounts/editar_perfil.html
@@ -51,15 +51,32 @@
         <div class="bg-circle-4 bg-circle"></div>
     </header>
 
-    <!-- Formulario de edición de perfil -->
     <section id="scroll">
         <form method="POST" class="m-2" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form.as_p }}
+            <div class="form-group">
+                <label for="{{ form.username.id_for_label }}">Nombre de usuario:</label>
+                {{ form.username }}
+            </div>
+            <div class="form-group">
+                <label for="{{ form.email.id_for_label }}">Correo electrónico:</label>
+                {{ form.email }}
+            </div>
+            <div class="form-group">
+                <label for="{{ form.first_name.id_for_label }}">Nombre:</label>
+                {{ form.first_name }}
+            </div>
+            <div class="form-group">
+                <label for="{{ form.last_name.id_for_label }}">Apellido:</label>
+                {{ form.last_name }}
+            </div>
+            <div class="form-group">
+                <label for="{{ avatar_form.avatar.id_for_label }}">Avatar:</label>
+                {{ avatar_form.avatar }}
+            </div>
             <input type="submit" value="Guardar cambios" class="btn btn-primary">
         </form>
     </section>
-
     <!-- Footer -->
     <footer class="py-5 bg-black">
         <div class="container px-5">
